fixed flex gap problem

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -87,8 +87,10 @@ main {
 }
 
 .pics {
-    height: 400px;
-    object-fit: contain;
+    flex: 1;
+    max-width: 100%;
+    max-height: 400px;
+    object-fit: cover
 }
 
 .gallery-pics {
